# dakota-technical-assessment

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  run.sh
api/: Dockerfile  pyproject.toml
api/app/: config.py  generators.py  main.py  models.py  regions.py
database/documentation/: schema.md
database/init/: bronze.sql
dbt/: dbt_project.yml  profiles.yml
dbt/models/gold/: _marts.yml  fct_national_weather_monthly.sql  fct_natural_gas_imports_monthly.sql  fct_weather_daily.sql
dbt/models/silver/: _sources.yml  _staging.yml  stg_eia_natural_gas_imports.sql  stg_enrichment_weather.sql
docs/: architecture.md  decisions.md
ingestion/: pyproject.toml
ingestion/ingestion/: _http.py  config.py  eia.py  enrichment.py  models.py
orchestration/: Dockerfile  requirements.txt
orchestration/dags/: energy_pipeline.py
reports/: generate_report.py  pyproject.toml
tests/api/: conftest.py  test_generators.py  test_main.py
tests/ingestion/: conftest.py  test_eia.py  test_enrichment.py
