[project]
name = "dakota-ingestion"
version = "0.1.0"
description = "Ingestion clients for EIA natural gas import data and the Dakota enrichment API"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27.0",
    "tenacity>=9.0.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ingestion"]
